Brief analysis of imdb data

--- a/numpy_and_pandas/playing_with_pandas.ipynb
+++ b/numpy_and_pandas/playing_with_pandas.ipynb
@@ -1746,7 +1746,9 @@
    "cell_type": "code",
    "execution_count": 131,
    "id": "429076e6-f716-4d99-8461-8725c22b54fb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1774,9 +1776,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04f1e68d-3372-4b15-b55a-5778b488ec78",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d4310d-17e1-4dac-a1ab-94c1dc6f15b4",
+   "id": "2b05ce8d-d0c8-48f9-b559-8f7c6a06df41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b3fc2bd-4faa-4cd6-9a1c-74cfc8840731",
    "metadata": {},
    "outputs": [],
    "source": []
